[gd_scene load_steps=3 format=3 uid="uid://dsakrc2a4e0a2"]

[ext_resource type="Script" uid="uid://c2vbx1jjk2prd" path="res://control.gd" id="1_0fbet"]

[sub_resource type="LabelSettings" id="LabelSettings_0fbet"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0fbet")

[node name="JobOption" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 13.0
offset_right = 178.0
offset_bottom = 44.0

[node name="SelectJob" type="Label" parent="."]
layout_mode = 0
offset_top = 14.0
offset_right = 84.0
offset_bottom = 37.0
text = "Select Job :"

[node name="JobDesc" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 82.0
offset_right = 180.0
offset_bottom = 196.0
text = "Desc here
"

[node name="Skill1" type="Label" parent="."]
layout_mode = 2
offset_left = 2.0
offset_top = 205.0
offset_right = 352.0
offset_bottom = 392.0
label_settings = SubResource("LabelSettings_0fbet")
autowrap_mode = 3

[connection signal="item_selected" from="JobOption" to="." method="_on_job_option_item_selected"]
